data/derived/fa15/progs/unify/prog3271.ml.out
Characters 48-52:
  |VarX -> "%s" VarX;;
           ^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
